--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/music-app-react-redux/favicon.ico"><title>React App</title><link href="/music-app-react-redux/static/css/main.a75874e4.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/music-app-react-redux/static/js/main.6ea19d65.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="music-app-react-redux/favicon.ico">
+    <title>React App</title>
+    <link href="music-app-react-redux/static/css/main.a75874e4.css" rel="stylesheet">
+</head>
+<body>
+<div id="root"></div>
+<script type="text/javascript" src="music-app-react-redux/static/js/main.6ea19d65.js"></script>
+</body>
+</html>
